--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_executable(unit_tests test_basic.cpp)
+add_executable(unit_tests 
+test_csv_loader.cpp
+)
 
 target_link_libraries(unit_tests PRIVATE gtest_main backtester_lib)
 
