added Abstract Strategy Class and MeanReversion with tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(unit_tests 
 test_csv_loader.cpp
+test_strategy.cpp
 )
 
 target_link_libraries(unit_tests PRIVATE gtest_main backtester_lib)
