--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(backtester_lib
     CsvTickLoader.cpp
+    MeanReversionStrategy.cpp
 )
 
 target_include_directories(backtester_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
