Added ExeuctionHandler and tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(backtester_lib
     CsvTickLoader.cpp
     MeanReversionStrategy.cpp
+    SimulatedExecutionHandler.cpp
 )
 
 target_include_directories(backtester_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
