--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(unit_tests
 test_csv_loader.cpp
 test_strategy.cpp
 test_execution.cpp
+test_portfolio.cpp
 )
 
 target_link_libraries(unit_tests PRIVATE gtest_main backtester_lib)
