--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,13 @@ add_library(backtester_lib
     portfolio/PortfolioHandler.cpp
 )
 
+
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
+
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -DNDEBUG")
+
 target_include_directories(backtester_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 add_executable(backtester_run main.cpp)
