--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,14 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y cmake build-essential
 
     - name: Configure CMake
-      run: cmake -S . -B build
+      run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
 
     - name: Build
       run: cmake --build build
 
     - name: Run Tests
       run: cd build && ctest --output-on-failure
+
     - name: Run Backtester Simulation
       run: |
         python3 scripts/generate_data.py
